// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tree.Item > should render with custom content 1`] = `
<div>
  <tree-item
    data-tree-item="true"
  >
    <!---->
    <span>
      Wait a minute!
    </span>
    
    <!---->
  </tree-item>
  
</div>
`;

exports[`Tree.Item > should render with custom content 2`] = `
<div>
  <tree-item
    class="flex items-center justify-center p-10"
    data-tree-item="true"
  >
    <!---->
    <span>
      Wait a minute!
    </span>
    
    <!---->
  </tree-item>
  
</div>
`;

exports[`Tree.Item > should render with custom props 1`] = `
<div>
  <tree-item
    data-label-x=""
    data-tree-empty="xyz"
    data-tree-item="true"
  >
    <!---->
    Item...
    
    <!---->
  </tree-item>
  
</div>
`;

exports[`Tree.Item > should render with string content 1`] = `
<div>
  <tree-item
    data-tree-item="true"
  >
    <!---->
    Item...
    
    <!---->
  </tree-item>
  
</div>
`;

exports[`Tree.Item > should render with string content 2`] = `
<div>
  <tree-item
    class="flex items-center justify-center p-10"
    data-tree-item="true"
  >
    <!---->
    Item...
    
    <!---->
  </tree-item>
  
</div>
`;
